--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -9,4 +9,24 @@ html
 
   body
     // CONTENT
-    block content
+    .front
+      img(class='front__screenshot' src=`http://localhost:3000/img/cover.jpg`)
+    
+    .side
+      h1= gameInfo.name
+
+    .back(style=`background-image:url(${gameInfo.background})`)
+      .back__imgs
+        img(class='back__ssBig' src=`${gameInfo.screenshots[0].path_full}`)
+        img(class='back__ssSmall' src=`${gameInfo.screenshots[1].path_full}`)
+        img(class='back__ssSmall' src=`${gameInfo.screenshots[2].path_full}`)
+        img(class='back__ssSmall' src=`${gameInfo.screenshots[3].path_full}`)
+      // short description
+      .back__shortDesc
+        p= gameInfo.short_description
+      // system requirements
+      .back__systemReq
+        p(class='back__systemReq--min')
+        p(class='back__systemReq--max')         
+    
+    script(src='/js/back.js')
