--- a/src/views/front.pug
+++ b/src/views/front.pug
@@ -2,5 +2,5 @@ extends base
 
 block content
  .front
-  img(class='headImg' src=`${gameInfo.header_image}`)
-  img(class='screenshot' src=`${gameInfo.screenshots[0].path_full}`)
+  //- img(class='front__headImg' src=`${gameInfo.header_image}`)
+  img(class='front__screenshot' src=`http://localhost:3000/img/cover.jpg`)
