--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  width: 1260px;
+  height: 900px;
   background-color: #333;
   display: flex;
 }
@@ -10,13 +12,18 @@ p {
   font-family: sans-serif;
 }
 
+.overlay {
+  position: absolute;
+  z-index: 2000;
+  display: none;
+}
+
 .front,
 .back {
-  width: 600px;
+  width: 563px;
   height: 900px;
   position: relative;
   background-size: cover;
-  margin-top: 600px;
 }
 
 .front__headImg {
@@ -101,7 +108,7 @@ p {
 }
 
 .backSide {
-  width: 60px;
+  width: 134px;
   height: 900px;
   position: relative;
   overflow: hidden;
